// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeyboardAvoidingView renders correctly 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "#0b0805",
      },
      undefined,
    ]
  }
/>
`;

exports[`Text renders correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#fff",
        "fontFamily": "objektiv",
      },
      undefined,
    ]
  }
>
  Snapshot test!
</Text>
`;

exports[`View renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#0b0805",
      },
      undefined,
    ]
  }
/>
`;

exports[`useThemeColor renders correctly 1`] = `<useThemeColor />`;
